apps/syncthing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syncthing
  namespace: syncthing
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: sync.massivehog.win
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: syncthing
            port:
              number: 8384
  tls:
  - hosts:
    - sync.massivehog.win
    secretName: syncthing-tls
